chore: jwt, navbar profile

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ GOOGLE_CLIENT_ID=368573151982-bsahot3m0nlslm7fvcl5ad4i6svsbhj9.apps.googleuserco
 GOOGLE_CLIENT_SECRET=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
 
 NEXT_AUTH_SECRET=1234dffaefwe123
+NEXT_AUTH_URL=http://localhost:3000
