chore: setting up createNewProject function

--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@ GOOGLE_CLIENT_SECRET=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
 
 NEXT_AUTH_SECRET=1234dffaefwe123
 NEXT_AUTH_URL=http://localhost:3000
+
+CLOUDINARY_NAME=dfmqvrysc 
+API_KEY=891419764251863
+API_SECRET=kmaK-sm_QKKMZcZy3jNUcFa1knU
